--- a/MasonSoftwareSolutions.EventDispatcher.csproj
+++ b/MasonSoftwareSolutions.EventDispatcher.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageId>EventDispatcher</PackageId>
+    <PackageId>MasonSoftwareSolutions.EventDispatcher</PackageId>
     <Version>0.1.0</Version>
     <Authors>Jacob Mason</Authors>
     <Company>Mason Software Solutions</Company>
@@ -13,6 +13,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.1" />
     <PackageReference Include="Scrutor" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="LICENSE" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
